--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="container"> -->
     <div id="buttonRow" class="row">
         <div id="buttonCol" class="col-md-12">
             buttons
@@ -31,12 +31,18 @@
         </div>
         <!--col-->
         <div id="inputCol" class="col-md-4">
-            input area
+            <form id="housewife-form">
+                <label for="housewife-input">Add Your Favorite Housewife</label>
+                <br>
+                <input type="text" id="housewife-input">
+                <br>
+                <input id="add-housewife" type="submit" value="ADD">
+            </form>
         </div>
         <!--col-->
     </div>
     <!---row-->
-</div> <!--container-->
+    <!-- </div> container -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="./assets/javascript/app.js"></script>
 
