--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <br>
                 <input type="text" id="housewife-input">
                 <br>
-                <input id="add-housewife" type="submit" value="ADD">
-            </form>
+                <input id="add-housewife" type="submit" value="Add another Queen">    
+                    </form>
         </div>
         <!--col-->
     </div>
