--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Added a link to Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-</head>
-
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Sonsie+One" rel="stylesheet">
 <body>
     <!-- <div class="container"> -->
+    <div class="row">
+        <div class="col-md-12">
+            <header>The Real Housewives</header> 
+        </div>
+        <!--col-->
+    </div>
     <div id="buttonRow" class="row">
         <div id="buttonCol" class="col-md-12">
             buttons
@@ -26,8 +31,6 @@
 
     <div id="gifRow" class="row">
         <div id="gifCol" class="col-md-8">
-            GIF pics
-
         </div>
         <!--col-->
         <div id="inputCol" class="col-md-4">
@@ -36,8 +39,8 @@
                 <br>
                 <input type="text" id="housewife-input">
                 <br>
-                <input id="add-housewife" type="submit" value="Add another Queen">    
-                    </form>
+                <input id="add-housewife" type="submit" value="Add another Queen">
+            </form>
         </div>
         <!--col-->
     </div>
