--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="buttonRow" class="row">
         <div id="buttonCol" class="col-md-8">
         </div>
-        <div id="inputCol" class="col-md-4">
+        <div id="inputCol" class="boxer col-md-4">
             <form id="housewife-form">
                 <label for="housewife-input">Add Your Favorite Housewife</label>
                 <br>
