--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Sonsie+One" rel="stylesheet">
 
-<body>
+<body class= "wrapper">
     <!-- <div class="container"> -->
     <div class="row">
         <div class="col-md-12">
@@ -37,7 +37,8 @@
         <!--col-->
     </div>
     <!---row-->
-
+    <div class="ten row">
+    </div>
     <div id="gifRow" class="row">
         <div id="gifCol" class="col-md-8">
         </div>
